# django-libsql

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: test-gil.yml  test.yml  test_all_modes.yml
examples/: README.md  __init__.py  pyproject.toml  run_example.py  shared_cleanup.py
examples/basic_app/: run_app.py  settings.py  urls.py
examples/basic_app/templates/todo/: index.html
examples/basic_app/todo/: admin.py  apps.py  models.py  urls.py  views.py
examples/basic_app/todo/management/commands/: cleanup_todo.py  create_sample_data.py  setup_app.py
examples/basic_app/todo/migrations/: 0001_initial.py
examples/blog_app/: run_app.py  settings.py  urls.py
examples/blog_app/blog/: admin.py  apps.py  models.py  urls.py  views.py
examples/blog_app/blog/management/commands/: cleanup_blog.py  create_blog_data.py
examples/blog_app/blog/migrations/: 0001_initial.py
examples/blog_app/blog/templates/blog/: category_posts.html  index.html  post_detail.html  search.html
examples/data_processor/: run_app.py  settings.py  settings_embedded.py  urls.py
examples/data_processor/processor/: admin.py  apps.py  models.py  processing.py  processing_embedded.py  urls.py  views.py
examples/data_processor/processor/management/commands/: cleanup_processor.py  create_processor_data.py
examples/data_processor/processor/migrations/: 0001_initial.py
examples/data_processor/processor/templates/processor/: compare_performance.html  index.html  job_detail.html
examples/embedded_replica_app/: README.md  __init__.py  manage.py  run_app.py  settings.py  urls.py
examples/embedded_replica_app/sensors/: admin.py  apps.py  models.py  urls.py  views.py
examples/embedded_replica_app/sensors/management/commands/: cleanup_sensors.py  create_sensor_data.py  simulate_sensors.py  test_all_modes.py
examples/embedded_replica_app/sensors/migrations/: 0001_initial.py  0002_sensorreading_pressure.py
examples/embedded_replica_app/sensors/templates/sensors/: dashboard.html
examples/gil_benchmark/: benchmark.py  manage.py  run_app.py  settings.py  urls.py
examples/gil_benchmark/benchmark_app/: admin.py  apps.py  models.py  urls.py  views.py
examples/gil_benchmark/benchmark_app/management/commands/: benchmark_all_modes.py  cleanup_benchmark.py  create_benchmark_data.py  run_benchmark.py
examples/gil_benchmark/benchmark_app/migrations/: 0001_initial.py
examples/gil_benchmark/benchmark_app/templates/benchmark_app/: dashboard.html
examples/realtime_analytics/: run_app.py  settings.py  urls.py
examples/realtime_analytics/analytics/: admin.py  apps.py  models.py  tracker.py  urls.py  views.py
examples/realtime_analytics/analytics/management/commands/: cleanup_analytics.py  create_analytics_data.py
examples/realtime_analytics/analytics/migrations/: 0001_initial.py
examples/realtime_analytics/analytics/templates/analytics/: dashboard.html  no_data.html
src/django_libsql/: __init__.py  apps.py
src/django_libsql/libsql/: base.py  creation.py  features.py  operations.py  schema.py
tests/: README.md  cleanup_tests.py  conftest.py  conftest_gil.py  pytest_gil_plugin.py  settings.py  test_backend.py  test_embedded_replica.py  test_gil_comparison.py  test_gil_comparison_manual.py  test_quick_threading.py  test_remote_only.py  test_runner_gil.py  test_threading.py
tests/management/commands/: test_threading.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
